<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <com.view.MTextView
        android:paddingTop="@dimen/_5sdp"
        android:id="@+id/selectServiceTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#FFFFFF"
        android:gravity="start|center"
        android:paddingStart="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_5sdp"

        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text=""
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:visibility="gone"

        app:customTypeFace="@string/systemSemiBold" />
    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/_2sdp"

        android:layout_marginEnd="@dimen/_10sdp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="0dp">

        <LinearLayout
            android:id="@+id/contentArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_80sdp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_10sdp">

            <com.view.SelectableRoundedImageView
                android:id="@+id/catImgView"
                android:layout_width="@dimen/category_grid_size"
                android:layout_height="@dimen/category_grid_size"
                android:layout_gravity="center"
                android:src="@mipmap/ic_no_icon"
                android:scaleType="fitXY"
                app:sriv_left_bottom_corner_radius="@dimen/_5sdp"
                app:sriv_left_top_corner_radius="@dimen/_5sdp"
                app:sriv_right_bottom_corner_radius="@dimen/_5sdp"
                app:sriv_right_top_corner_radius="@dimen/_5sdp"

               />
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.view.MTextView
                android:id="@+id/catNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
             android:layout_gravity="center"
                android:textColor="@color/appThemeColor_1"
                android:textSize="@dimen/_13ssp"
                app:customTypeFace="@string/systemBold" />
                <com.view.MTextView
                    android:id="@+id/catDescTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                   android:layout_gravity="center"
                    android:textColor="#555454"
                    android:textSize="@dimen/_11ssp"
                    app:customTypeFace="@string/systemRegular" />
            </LinearLayout>



        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>