<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/imageArea"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_110sdp"
        android:layout_gravity="center"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="@color/appThemeColor_1"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_4sdp"
            app:srcCompat="@drawable/ic_feedback_new" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageArea"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <com.view.MTextView
                android:id="@+id/titleTxt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/all_btn_height"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Title Text"
                android:textAllCaps="true"
                android:textColor="@color/appThemeColor_1"
                android:textSize="@dimen/txt_size_16"
                android:textStyle="bold"
                app:customTypeFace="@string/systemSemiBold" />


            <com.view.MTextView
                android:id="@+id/msgTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/txt_size_14"
                android:visibility="visible"
                app:customTypeFace="@string/systemRegular" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:visibility="visible">

            <com.view.MTextView
                android:id="@+id/skipTxt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/unselected_border"
                android:backgroundTint="@color/appThemeColor_1"
                android:gravity="center"
                android:text="Cancel"
                android:textAllCaps="true"
                android:includeFontPadding="false"
                android:textColor="@color/appThemeColor_1"
                android:textSize="@dimen/txt_size_16"
                android:visibility="invisible"
                app:customTypeFace="@string/systemMediumFont" />

            <com.view.MTextView
                android:id="@+id/okTxt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/selected_border"
                android:includeFontPadding="false"
                android:backgroundTint="@color/appThemeColor_1"
                android:gravity="center"
                android:text="OK"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_16"
                app:customTypeFace="@string/systemMediumFont" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>