<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentArea"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_5sdp">

    <com.view.MTextView
        android:id="@+id/selectServiceTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="#f3f3f3"
        android:gravity="start|center"
        android:paddingStart="@dimen/_18sdp"
        android:paddingTop="@dimen/_5sdp"

        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text=""
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:visibility="gone"

        app:customTypeFace="@string/systemSemiBold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectServiceTxt"
        android:layout_marginEnd="@dimen/_minus5sdp"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.cardview.widget.CardView
            android:layout_marginStart="@dimen/_140sdp"
            android:id="@+id/cardViewBanner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_15sdp"

            android:layout_marginBottom="@dimen/_15sdp"

            app:cardCornerRadius="@dimen/_5sdp"


            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageAreaBg"
            app:layout_constraintEnd_toEndOf="parent"


            app:layout_constraintTop_toTopOf="@+id/imageAreaBg">

            <RelativeLayout



                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <com.view.MTextView
                        android:id="@+id/catNameTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"


                        android:layout_marginEnd="@dimen/_10sdp"

                        android:alpha=".8"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center"
                        android:maxWidth="@dimen/_260sdp"
                        android:maxLines="2"
                        android:textAllCaps="true"
                        android:textColor="@color/appThemeColor_1"
                        android:textSize="@dimen/_11ssp"
                        app:customTypeFace="@string/systemBold" />

                    <com.view.MTextView

                        android:id="@+id/catDescTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/catNameTxt"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:alpha=".8"
                        android:clickable="false"
                        android:ellipsize="end"
                        android:focusable="false"
                        android:gravity="center"
                        android:maxLines="3"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_15sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_8ssp"
                        android:visibility="visible"
                        app:customTypeFace="@string/systemLightFont" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/imageAreaBg"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/right_curve_card"

            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.view.SelectableRoundedImageView
                android:id="@+id/catImgView"

                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher"
                app:sriv_right_bottom_corner_radius="@dimen/_10sdp"
                app:sriv_right_top_corner_radius="@dimen/_10sdp" />

            <com.view.SelectableRoundedImageView
                android:id="@+id/rtlcatImgView"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:adjustViewBounds="true"


                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher"
                android:visibility="gone"
                app:sriv_left_bottom_corner_radius="@dimen/_10sdp"
                app:sriv_left_top_corner_radius="@dimen/_10sdp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>